--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.6.6
   provider: ^6.0.5
-  firebase_core: ^2.16.0
+  # firebase_core: ^2.16.0
   # firebase_crashlytics: ^3.3.
   # firebase_auth: ^4.10.0
   # cloud_firestore: ^4.9.2
@@ -45,11 +45,13 @@ dependencies:
   json_theme: ^4.0.0
   # percent_indicator: ^4.2.3
   http: ^1.1.0
-  liquid_pull_to_refresh: ^3.0.1
+  # liquid_pull_to_refresh: ^3.0.1
   google_fonts:
   intl: ^0.18.1
   flutter_svg: ^2.0.7
   flutter_expanded_tile: ^0.3.7
+  swipe_refresh: ^1.0.2
+  shared_preferences: ^2.2.1
 
 
 
